fix(ios): use 100dvh to prevent page overflowing viewport, pin tabbar to screen bottom

--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@
 html,
 body {
   height: 100%;
+  height: 100dvh;
   overflow: hidden;
   overflow-x: hidden;
 }
@@ -50,6 +51,7 @@ body {
   display: flex;
   flex-direction: column;
   height: 100%;
+  max-height: 100dvh;
   opacity: 0;
   pointer-events: none;
   transform: translateX(8px);
